Archive2/91/4789434da3cf67/output
main.cpp:8:1: error: control reaches end of non-void function [-Werror,-Wreturn-type]
}
^
main.cpp:14:17: warning: variable 'x' is uninitialized when used here [-Wuninitialized]
   std::cout << x << std::endl ;
                ^
main.cpp:12:9: note: initialize the variable 'x' to silence this warning
   int x ;
        ^
         = 0
1 warning and 1 error generated.
